fix(ui-options): Don't let words overflow in Options component
refs: INSTUI-2438

TEST PLAN:
Provide a long, uninterrupted word to the option component and check if the word will break at the
max width of the option component

Reviewed-on: https://gerrit.instructure.com/c/instructure-ui/+/243845
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Bence Toppanto <bence.toppanto@instructure.com>
Product-Review: Bence Toppanto <bence.toppanto@instructure.com>
Visual-Regression-Test: Bence Toppanto <bence.toppanto@instructure.com>

--- a/packages/ui-options/src/Options/styles.css
+++ b/packages/ui-options/src/Options/styles.css
@@ -24,6 +24,7 @@
 
 .root {
   box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 .list {
